docs/Kubernetes/kubernetes-wordpress/manifests/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: demo
spec:
  selector:
    app: mysql
  type: ClusterIP
  #type: LoadBalancer
  ports:
  - name: mysql
    protocol: TCP
    port: 3306
    targetPort: 3306
