docs/Kubernetes/kubernetes-wordpress/manifests/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: demo
spec:
  selector:
    app: wordpress
  type: ClusterIP
  #type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
